# CSC8503-2023

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeSettings.json  CSC8503.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Assets/Data/: ItemGrid0.txt  ItemGrid1.txt  ItemGridTest2.txt  LevelGridTest.txt  LevelGridTest2.txt  TestGrid1.txt
CSC8503/: CMakeLists.txt  CSC8503.vcxproj.filters  CourseworkGame.cpp  CourseworkGame.h  GameScreen.h  GameTechRenderer.cpp  IntroScreen.h  LevelData.cpp  LevelData.h  Main.cpp  NetworkedGame.cpp  NetworkedGame.h  PauseScreen.h  StateGameObject.cpp  StateGameObject.h  TutorialGame.cpp  TutorialGame.h
CSC8503CoreClasses/: AABBVolume.h  BehaviourSequence.h  CMakeLists.txt  CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  CapsuleVolume.h  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.h  Debug.cpp  Debug.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  NavigationGrid.cpp  NavigationGrid.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.h  OBBVolume.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PushdownMachine.cpp  PushdownMachine.h  PushdownState.h  QuadTree.h  Ray.h  RenderObject.h  SphereVolume.h  StateMachine.cpp  (+1 more)
Client/: Main_Client.cpp
NCLCoreClasses/: Vector3.cpp  Vector3.h
OpenGLRendering/: OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters
Server/: CMakeLists.txt  Main_Server.cpp
(+8 files in other folders)
